--- a/core/main/main.py.in
+++ b/core/main/main.py.in
@@ -104,7 +104,7 @@ if opts.test:
 if not 'openmp' in features and (opts.cores or (opts.threads and opts.threads>1)):
 	print 'WARNING: compiled without OpenMP, -j/--threads/--cores have no effect.'
 
-# OpenMP env variables must be se before loading yade libs ("import yade" below)
+# OpenMP env variables must be set before loading yade libs ("import yade" below)
 # changes have no effeect after libgomp initializes
 if opts.cores:
 	if opts.threads: print 'WARNING: --threads ignored, since --cores specified.'
