--- a/scripts/ppa/.mini-dinstall.conf
+++ b/scripts/ppa/.mini-dinstall.conf
@@ -6,6 +6,7 @@ mail_on_success = 0
 dynamic_reindex = 1
 archive_style = flat
 generate_release = 1
+keep_old = 0
 release_description = YADE Debian/Ubuntu daily packages
 
 [wheezy]
