Introduce YADE_ODEINT feature
Check boost version and enable YADE_ODEINT, if
Boost >=1.53

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -129,6 +129,19 @@ INCLUDE_DIRECTORIES(${BZIP2_INCLUDE_DIR})
 INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIRS})
 SET(LINKLIBS  "${LINKLIBS};${BZIP2_LIBRARIES};${ZLIB_LIBRARIES};")
 #===========================================================
+IF((Boost_MAJOR_VERSION EQUAL 1) OR (Boost_MAJOR_VERSION GREATER 1) AND
+  ((Boost_MINOR_VERSION EQUAL 53) OR (Boost_MINOR_VERSION GREATER 53)))
+  SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} Odeint")
+  ADD_DEFINITIONS("-DYADE_ODEINT")
+ELSE((Boost_MAJOR_VERSION EQUAL 1) OR (Boost_MAJOR_VERSION GREATER 1) AND
+    ((Boost_MINOR_VERSION EQUAL 53) OR (Boost_MINOR_VERSION GREATER 53)))
+  SET(DISABLED_FEATS "${DISABLED_FEATS} Odeint")
+  MESSAGE(STATUS "Boost Odeint can be enabled, only if Boost>=1.53 is used")
+  MESSAGE(STATUS ${Boost_MAJOR_VERSION})
+  MESSAGE(STATUS ${Boost_MINOR_VERSION})
+ENDIF((Boost_MAJOR_VERSION EQUAL 1) OR (Boost_MAJOR_VERSION GREATER 1) AND
+     ((Boost_MINOR_VERSION EQUAL 53) OR (Boost_MINOR_VERSION GREATER 53)))
+#===========================================================
 IF(ENABLE_VTK)
   FIND_PACKAGE(VTK) 
   IF(VTK_FOUND)
