--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -403,6 +403,7 @@ IF(ENABLE_VTK)
   IF(${VTK_MAJOR_VERSION} EQUAL 6)
     TARGET_LINK_LIBRARIES(yade ${VTK_LIBRARIES})
     ADD_DEFINITIONS("-DYADE_VTK6")
+    MESSAGE(STATUS "VTK version 6 is found")
   ELSE(${VTK_MAJOR_VERSION} EQUAL 6)
     TARGET_LINK_LIBRARIES(yade vtkHybrid)
   ENDIF(${VTK_MAJOR_VERSION} EQUAL 6)
