--- a/core/main/main.py.in
+++ b/core/main/main.py.in
@@ -18,7 +18,7 @@ sys.path.insert(1,'${runtimePREFIX}/${LIBRARY_OUTPUT_PATH}/yade${SUFFIX}/py')
 # get yade path (allow YADE_PREFIX to override)
 prefix,suffix='${runtimePREFIX}' if not os.environ.has_key('YADE_PREFIX') else os.environ['YADE_PREFIX'],'${SUFFIX}'
 # duplicate some items from yade.config here, so that we can increase verbosity when the c++ part is booting
-features,version,debugbuild='${features}'.split(' '),'${realVersion}',' ${debugbuild}'
+features,version,debugbuild='${CONFIGURED_FEATS}'.split(' '),'${realVersion}',' ${debugbuild}'
 
 libPATH='${LIBRARY_OUTPUT_PATH}'
 if (libPATH[1:] == '{LIBRARY_OUTPUT_PATH}'): libPATH='lib'
@@ -101,7 +101,7 @@ if opts.test:
 		print 20*'*'+' SOME TESTS FAILED '+20*'*'
 		sys.exit(1)
 
-if not 'openmp' in features and (opts.cores or (opts.threads and opts.threads>1)):
+if not 'OpenMP' in features and (opts.cores or (opts.threads and opts.threads>1)):
 	print 'WARNING: compiled without OpenMP, -j/--threads/--cores have no effect.'
 
 # OpenMP env variables must be set before loading yade libs ("import yade" below)
@@ -240,7 +240,7 @@ def userSession(qt4=False,qapp=None):
 ## run userSession in a way corresponding to the features we use:
 gui=None
 yade.runtime.hasDisplay=False # this is the default initialized in the module, anyway
-if 'qt4' in features: gui='qt4'
+if 'GUI' in features: gui='qt4'
 if opts.nogui: gui=None
 if gui:
 	import Xlib.display
