--- a/py/CMakeLists.txt
+++ b/py/CMakeLists.txt
@@ -5,6 +5,7 @@ IF(ENABLE_GTS)
     MESSAGE(STATUS "Use system gts version")
   ELSE (PY_gts)
     MESSAGE(STATUS "Use embedded version of gts. Please, consider installing the corresponding package")
+    REMOVE_DEFINITIONS("-std=c++0x")
     FILE(GLOB SRC_PYGTS "${CMAKE_CURRENT_SOURCE_DIR}/3rd-party/pygts-0.3.1/*.c")
     ADD_LIBRARY(_gts SHARED ${SRC_PYGTS})
     SET_TARGET_PROPERTIES(_gts PROPERTIES PREFIX "")
@@ -12,6 +13,7 @@ IF(ENABLE_GTS)
     INSTALL(FILES 3rd-party/pygts-0.3.1/__init__.py DESTINATION ${YADE_LIB_PATH}/py/gts)
     INSTALL(FILES 3rd-party/pygts-0.3.1/pygts.py DESTINATION ${YADE_LIB_PATH}/py/gts)
     INSTALL(TARGETS _gts DESTINATION ${YADE_LIB_PATH}/py/gts)
+    ADD_DEFINITIONS("-std=c++0x")
   ENDIF (PY_gts)
 ENDIF(ENABLE_GTS)
 #==================pygts=========================================
